--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -18,7 +18,34 @@
 
 /* Extra small devices (portrait phones, less than 768px) */
 @media (max-width: 767.98px) { 
-   
+  .title {
+    font-size: 25px;
+} 
+h2 {
+    font-size: 18px;
+    padding-bottom: 20px;
+}
+p {
+    font-size: 16px;
+    line-height: 1.5;
+        margin-bottom: 15px;
+    }
+    a {
+    font-size: 16px;
+}
+main {
+    margin-top: 30px;
+    padding: 20px;
+    }
+    h1 {
+    font-size: 35px;
+    font-weight: 700;
+}
+.header-text p {
+    color: #4d4d4d;
+    font-family: "Poppins", sans-serif;
+    font-size: 14px !important;
+    }
 }
 
 /* Small devices (landscape phones, 576px and up) */
